--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 #Datos de configuración de la base de datos
-password=
-host=localhost
-usuario=root
+password=Nn664515247
+host=mtgadministrator.ddns.net
+usuario=todo
 bbdd=bddfinal
